git-repair (1.20210111) UNRELEASED; urgency=medium

  * Merge from git-annex.
  * Makefile: Support building with cabal 3.0.

 -- Joey Hess <id@joeyh.name>  Mon, 11 Jan 2021 21:52:06 -0400

git-repair (1.20200504) unstable; urgency=medium

  * Fix a few documentation typos.
  * Improve fetching from a remote with an url in host:path format.
  * Merge from git-annex.

 -- Joey Hess <id@joeyh.name>  Mon, 04 May 2020 15:38:53 -0400

git-repair (1.20200102) unstable; urgency=medium

  * Relicensed AGPL.
  * Merge from git-annex.
  * Removed the network-uri build flag.
  * Increased required version of several dependencies.
  * Added dependencies on deepseq, attoparsec and filepath-bytestring.

 -- Joey Hess <id@joeyh.name>  Thu, 02 Jan 2020 12:39:13 -0400

git-repair (1.20170626) unstable; urgency=medium

  * Merge from git-annex.
  * Removes dependency on MissingH, adding a dependency on split instead.
  * Fixes build with directory-1.3.

 -- Joey Hess <id@joeyh.name>  Mon, 26 Jun 2017 12:15:29 -0400

git-repair (1.20161118) unstable; urgency=medium

  * Fix build with recent versions of cabal and ghc.

 -- Joey Hess <id@joeyh.name>  Fri, 18 Nov 2016 12:59:07 -0400

git-repair (1.20161111) unstable; urgency=medium

  * git-repair.cabal: Add Setup-Depends.
  * Updated cabal file explictly lists source files. The tarball
    on hackage will include only the files needed for cabal install;
    it is NOT the full git-repair source tree.
  * debian/changelog: Converted to symlinks to CHANGELOG.
  * Merge from git-annex.
  * Makefile: Support building with stack as well as cabal.
  * Makefile: The CABAL variable has been renamed to BUILDER.

 -- Joey Hess <id@joeyh.name>  Fri, 11 Nov 2016 14:56:14 -0400

git-repair (1.20151215) unstable; urgency=medium

  * Fix insecure temporary permissions and potential denial of
    service attack when creating temp dirs. Closes: #807341
  * Merge from git-annex.

 -- Joey Hess <id@joeyh.name>  Tue, 15 Dec 2015 20:47:59 -0400
